--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,69 +18,38 @@ dependencies:
   # Common Modules
   shared_preferences: ^2.0.7
   flutter_svg: ^0.22.0
-  url_launcher: ^6.0.10
   flutter_svg_provider: ^0.1.10
   cached_network_image: ^3.1.0
-  basic_utils: ^3.3.2
-  uuid: ^3.0.5
-
-  # SSO Modules
-  sign_in_with_apple: ^3.2.0
-  google_sign_in: ^5.1.0
-  flutter_facebook_auth: ^3.5.2
+  just_audio: ^0.9.20
+  stop_watch_timer: ^1.3.1
+  flutter_vibrate: ^1.3.0
 
   # Core Modules
   get_it: ^7.2.0
   get: ^4.3.8
-  flutter_cache_manager: ^3.1.2
   path_provider: ^2.0.4
   diacritic: ^0.1.3
   provider: ^6.0.1
-  jwt_decoder: ^2.0.1
-  dart_jsonwebtoken: ^2.3.2
-  flutter_secure_storage: ^5.0.2
 
   # Native Specific Modules
-  app_tracking_transparency: ^2.0.2+1
-  package_info: ^2.0.2
   app_review: ^2.1.1+1
-  webview_flutter: ^2.0.4
-  flutter_html: ^2.2.1
+  flutter_launcher_icons: ^0.9.2
+  in_app_purchase: ^3.0.2
 
   # UI Modules
   lottie: ^1.2.1
   shimmer: ^2.0.0
-  dotted_border: ^2.0.0+1
   flutter_sfsymbols: ^2.0.0
   auto_size_text: ^3.0.0-nullsafety.0
   dotted_line: ^3.0.1
 
-  # Geolocation Modules
-  google_maps_flutter: ^2.0.9
-  flutter_google_places: ^0.3.0
-  geocoder:
-    git:
-      https://github.com/nguyenxdat/flutter_geocoder.git
-  geolocator: ^7.7.0
-  map_launcher: ^2.0.0
-
-  # GraphQL Modules
-  json_annotation: ^4.0.1
-  equatable: ^2.0.3
-  meta: ^1.3.0
-  gql: ^0.13.0
-  artemis: ^7.1.1-beta.1
-  jose: ^0.3.2
-  graphql_flutter: ^5.0.0
-  gql_websocket_link: ^0.3.1
-
-  # Firebase Modules
-  firebase_messaging: any
-  firebase_analytics: ^9.1.2
-  firebase_dynamic_links: ^2.0.10
-  firebase_in_app_messaging: any
-  firebase_crashlytics: any
-  firebase_remote_config: ^2.0.0
+#  # Firebase Modules
+#  firebase_messaging: any
+#  firebase_analytics: ^9.1.2
+#  firebase_dynamic_links: ^2.0.10
+#  firebase_in_app_messaging: any
+#  firebase_crashlytics: any
+#  firebase_remote_config: ^2.0.0
 
 dev_dependencies:
   change_app_package_name: ^1.0.0 #flutter pub run change_app_package_name:main com.new.package.name
@@ -95,7 +64,7 @@ dependency_overrides:
 flutter_icons: #flutter pub run flutter_launcher_icons:main
   android: "launcher_icon"
   ios: true
-  image_path: "assets/appIcons/launcher_icon.png"
+  image_path: "assets/appIcons/appIcon.png"
 
 
 flutter_intl:
@@ -108,14 +77,17 @@ flutter_intl:
 flutter:
   uses-material-design: true
   assets:
-    - assets/animations/
     - assets/appIcons/
     - assets/fonts/
     - assets/images/
+    - assets/audios/
+    - assets/data.json
 
-    #fonts:
-    #- family: fontFamily
-    #  fonts:
-    #    - asset: fonts/means/light.ttf
-    #    - asset: fonts/means/medium.ttf
-    #      weight: 700
+  fonts:
+  - family: Means
+    fonts:
+      - asset: assets/fonts/means/regular.ttf
+
+  - family: sficonsets
+    fonts:
+      - asset: packages/flutter_sfsymbols/fonts/sficonsets.ttf
