--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_boilerplate">
+    package="com.bondy.app">
 
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
-        android:label="flutter_boilerplate"
+        android:label="Bondy"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
