--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,82 +12,72 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   intl: ^0.17.0
   flutter_dotenv: ^5.0.2
 
   # Common Modules
-  shared_preferences: ^2.0.7
-  flutter_svg: ^0.22.0
-  url_launcher: ^6.0.10
-  flutter_svg_provider: ^0.1.10
-  cached_network_image: ^3.1.0
-  basic_utils: ^3.3.2
-  uuid: ^3.0.5
+  shared_preferences: ^2.0.18
+  flutter_svg: ^2.0.2
+  url_launcher: ^6.1.10
+  cached_network_image: ^3.2.3
 
   # SSO Modules
-#  sign_in_with_apple: ^3.2.0
-#  google_sign_in: ^5.1.0
-#  flutter_facebook_auth: ^3.5.2
+  #  sign_in_with_apple: ^3.2.0
+  #  google_sign_in: ^5.1.0
+  #  flutter_facebook_auth: ^3.5.2
 
   # Core Modules
   get_it: ^7.2.0
-  get: ^4.3.8
-  flutter_cache_manager: ^3.1.2
-  path_provider: ^2.0.4
-  diacritic: ^0.1.3
-  provider: ^6.0.1
-  jwt_decoder: ^2.0.1
-  dart_jsonwebtoken: ^2.3.2
-  flutter_secure_storage: ^5.0.2
+  get: ^4.6.5
+  provider: ^6.0.5
+  flutter_secure_storage: ^8.0.0
 
   # Native Specific Modules
-  package_info_plus: ^1.4.3+1
+  package_info_plus: ^3.0.3
   #  app_tracking_transparency: ^2.0.2+1
-#  package_info: ^2.0.2
-#  app_review: ^2.1.1+1
-#  webview_flutter: ^2.0.4
-#  flutter_html: ^2.2.1
+  #  package_info: ^2.0.2
+  #  app_review: ^2.1.1+1
+  #  webview_flutter: ^2.0.4
+  #  flutter_html: ^2.2.1
 
   # UI Modules
-#  lottie: ^1.2.1
-#  shimmer: ^2.0.0
-#  dotted_border: ^2.0.0+1
-#  flutter_sfsymbols: ^2.0.0
-#  auto_size_text: ^3.0.0-nullsafety.0
-#  dotted_line: ^3.0.1
+  shimmer: ^2.0.0
+  #  lottie: ^1.2.1
+  #  dotted_border: ^2.0.0+1
+  #  flutter_sfsymbols: ^2.0.0
+  #  auto_size_text: ^3.0.0-nullsafety.0
+  #  dotted_line: ^3.0.1
 
   # Geolocation Modules
-#  google_maps_flutter: ^2.1.5
-#  geolocator: ^8.2.1
+  #  google_maps_flutter: ^2.1.5
+  #  geolocator: ^8.2.1
 
   # GraphQL Modules
-  json_annotation: ^4.0.1
-  equatable: ^2.0.3
-  meta: ^1.3.0
-  gql: ^0.13.0
-  artemis: ^7.1.1-beta.1
-  jose: ^0.3.2
-  graphql_flutter: ^5.0.0
-  gql_websocket_link: ^0.3.1
+  json_annotation: ^4.7.0
+  equatable: ^2.0.5
+  meta: ^1.8.0
+  gql: ^0.14.0
+  artemis: ^7.11.0-beta.1
+  jose: ^0.3.3
+  graphql_flutter: ^5.1.2
 
   # Firebase Modules
-#  firebase_messaging: any
-#  firebase_analytics: ^9.1.2
-#  firebase_dynamic_links: ^2.0.10
-#  firebase_in_app_messaging: any
-#  firebase_crashlytics: any
-#  firebase_remote_config: ^2.0.0
+  firebase_core: ^2.7.0
+  firebase_messaging: 14.2.5
+  firebase_crashlytics: 3.0.15
+  #  firebase_analytics: ^9.1.2
+  #  firebase_dynamic_links: ^2.0.10
+  #  firebase_in_app_messaging: any
+  #  firebase_remote_config: ^2.0.0
 
 dev_dependencies:
-  change_app_package_name: ^1.0.0 #flutter pub run change_app_package_name:main com.new.package.name
-  pedantic: ^1.11.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
 
 dependency_overrides:
   platform: ^3.1.0
+  file: ^6.1.4
 
 flutter_icons: #flutter pub run flutter_launcher_icons:main
   android: "launcher_icon"
@@ -109,6 +99,8 @@ flutter:
     - assets/appIcons/
     - assets/fonts/
     - assets/images/
+    - .env.dev
+    - .env.prod
 
     #fonts:
     #- family: fontFamily
