--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,8 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 33
+    namespace "com.example.flutter_boilerplate"
+    compileSdkVersion 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -46,7 +47,7 @@ android {
     defaultConfig {
         applicationId "com.example.flutter_boilerplate"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
