--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   # API Modules
   graphql_flutter: ^5.1.2
   graphql_codegen: ^0.13.5
-  http: ^0.13.0
+  http: ^1.1.0
   jose: ^0.3.3
 
   # Firebase Modules
@@ -66,6 +66,11 @@ dependencies:
   #  firebase_dynamic_links: ^2.0.10
   #  firebase_in_app_messaging: any
   #  firebase_remote_config: ^2.0.0
+
+  dui:
+    git:
+      url: git@gitlab.com:dribba-labs/dribba-ui-flutter.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
