--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,22 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>779046204541-7tb3llksa7nn7k5a31o6l5os4g2csi38.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.779046204541-7tb3llksa7nn7k5a31o6l5os4g2csi38</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBz3UnLZb8k54El7Bp_QtnPL5IpTH5BbRs</string>
+	<string>AIzaSyCq1LjJ0nIME-JEy8FyoEHxkYobFNCzy2Q</string>
 	<key>GCM_SENDER_ID</key>
-	<string>779046204541</string>
+	<string>1080153158864</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.flutterBoilerplate</string>
+	<string>com.palumba.app</string>
 	<key>PROJECT_ID</key>
-	<string>boilerplate-afec6</string>
+	<string>palumba-14fae</string>
 	<key>STORAGE_BUCKET</key>
-	<string>boilerplate-afec6.appspot.com</string>
+	<string>palumba-14fae.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:779046204541:ios:052004105dd3bf14a6ed14</string>
+	<string>1:1080153158864:ios:8721db7d398118f8c39ad5</string>
 </dict>
 </plist>
