--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_boilerplate
+name: palumba_eu
 description: A new Flutter project boilerplate with GetX and Provider
 
 version: 1.0.0+1
@@ -30,6 +30,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_svg: ^2.0.10+1
   shimmer: ^3.0.0
+  google_fonts: ^6.2.1
   # auto_size_text: ^3.0.0
 
   # Localization Modules
@@ -81,7 +82,6 @@ flutter_intl:
 flutter:
   uses-material-design: true
   assets:
-    - assets/animations/
     - assets/appIcons/
     - assets/fonts/
     - assets/images/
