--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,6 @@ dependencies:
   # webview_flutter: ^4.7.0
 
   # UI Modules
-  dui: 0.0.4
   cached_network_image: ^3.3.1
   flutter_svg: ^2.0.10+1
   shimmer: ^3.0.0
@@ -63,9 +62,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-dependency_overrides:
-  dui: 0.0.4
-
 flutter_icons: #flutter pub run flutter_launcher_icons:main
   android: "launcher_icon"
   ios: true
@@ -75,7 +71,7 @@ flutter_icons: #flutter pub run flutter_launcher_icons:main
 flutter_intl:
   enabled: true
   class_name: S
-  main_locale: es
+  main_locale: en
   arb_dir: lib/utils/managers/i18n_manager/translations/l10n
   output_dir: lib/utils/managers/i18n_manager/translations/generated
 
@@ -85,6 +81,7 @@ flutter:
     - assets/appIcons/
     - assets/fonts/
     - assets/images/
+    - assets/images/flags/
     - .env.dev
     - .env.prod
 
