--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   shimmer: ^3.0.0
   google_fonts: ^6.2.1
+  lottie: ^3.1.0
   # auto_size_text: ^3.0.0
 
   # Localization Modules
@@ -82,6 +83,7 @@ flutter:
     - assets/fonts/
     - assets/images/
     - assets/images/flags/
+    - assets/anims/
     - .env.dev
     - .env.prod
 
