--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   # Common Modules
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.2.2
+  url_launcher: ^6.2.5
 
   # Core Modules
   get: ^4.6.6
@@ -32,6 +33,8 @@ dependencies:
   lottie: ^3.1.0
   path_drawing: ^1.0.1
   flutter_launcher_icons: ^0.13.1
+  flutter_widget_from_html_core: ^0.14.11
+  html: ^0.15.4
 
   # Localization Modules
   intl: ^0.18.1
