--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: palumba_eu
-description: A new Flutter project boilerplate with GetX and Provider
+description: Palumba project with GetX and Provider
 
-version: 0.5.0+205
+version: 0.6.0+296
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -44,6 +44,9 @@ dependencies:
 
   # Firebase Modules
   firebase_messaging: ^14.7.20
+
+  # Reporting Modules
+  sentry_flutter: ^7.19.0
 
 dev_dependencies:
   flutter_test:
