Refactor: Language & Entrance page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 
   # Firebase Modules
   firebase_messaging: ^14.7.20
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
