--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   # Firebase Modules
   firebase_messaging: ^14.7.20
   smooth_page_indicator: ^1.1.0
+  matrix4_transform: ^3.0.1
 
 dev_dependencies:
   flutter_test:
