--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path_drawing: ^1.0.1
   flutter_launcher_icons: ^0.13.1
   flutter_widget_from_html_core: ^0.14.11
+  flutter_html: ^3.0.0-beta.2
   fl_chart: ^0.67.0
   syncfusion_flutter_charts: ^25.1.41
 
