--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /lib/utils/managers/i18n_manager/translations/l10n
+  - source: /lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
     translation: /lib/utils/managers/i18n_manager/translations/l10n/intl_%two_letters_code%.arb
