--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   # Core Modules
   get: ^4.6.6
   provider: ^6.1.2
+  widgets_to_image: ^0.0.3
+  path_provider: ^2.1.3
 
   # Native Specific Modules
   package_info_plus: ^6.0.0
