--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   appinio_swiper: ^2.1.1
   auto_size_text: ^3.0.0
   dotted_border: ^2.1.0
+  flip_card: ^0.7.0
 
   # Localization Modules
   intl: ^0.19.0
