--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   # Reporting Modules
   sentry_flutter: ^8.0.0
   device_region: ^1.4.0
+  plausible_analytics: ^0.3.0
 
 dev_dependencies:
   flutter_test:
