--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,8 @@ dependencies:
   path_provider: ^2.1.3
 
   # Native Specific Modules
-  package_info_plus: ^6.0.0
-  share_plus: ^8.0.3
+  package_info_plus: ^8.1.3
+  share_plus: ^10.1.4
 
   # UI Modules
   cached_network_image: ^3.3.1
@@ -32,13 +32,13 @@ dependencies:
   shimmer: ^3.0.0
   lottie: ^3.1.0
   path_drawing: ^1.0.1
-  flutter_launcher_icons: ^0.13.1
-  flutter_widget_from_html_core: ^0.14.11
+  flutter_launcher_icons: ^0.14.3
+  flutter_widget_from_html_core: ^0.15.2
   flutter_html: ^3.0.0-beta.2
-  fl_chart: ^0.67.0
-  syncfusion_flutter_charts: ^25.1.41
+  fl_chart: ^0.70.2
+  syncfusion_flutter_charts: ^28.1.41
   smooth_page_indicator: ^1.1.0
-  matrix4_transform: ^3.0.1
+  matrix4_transform: ^4.0.1
   appinio_swiper: ^2.1.1
   auto_size_text: ^3.0.0
   dotted_border: ^2.1.0
@@ -55,6 +55,8 @@ dependencies:
   sentry_flutter: ^8.0.0
   device_region: ^1.4.0
   plausible_analytics: ^0.3.0
+  firebase_core: ^3.4.0
+  firebase_messaging: ^15.2.1
 
 dev_dependencies:
   flutter_test:
