--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   plausible_analytics: ^0.3.0
   firebase_core: ^3.4.0
   firebase_messaging: ^15.2.1
+  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
