--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAWY9W-vIEnOZ6gWhzt_vZHPyd4kaANnPA</string>
+	<string>AIzaSyBZ2whn3c9hsThlfclkX4IUjFXHDjTh-Gw</string>
 	<key>GCM_SENDER_ID</key>
-	<string>764224091575</string>
+	<string>646418472598</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.palumba.app.ios</string>
 	<key>PROJECT_ID</key>
-	<string>palumba-eu</string>
+	<string>palumba-app</string>
 	<key>STORAGE_BUCKET</key>
-	<string>palumba-eu.firebasestorage.app</string>
+	<string>palumba-app.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:764224091575:ios:df8ba698ce11e131b16432</string>
+	<string>1:646418472598:ios:9b4affaf60c81546ab6cb7</string>
 </dict>
 </plist>
